<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etPoupancaSaque"
        android:layout_width="253dp"
        android:layout_height="48dp"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:hint="@string/etPoupancaSaque"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/etPoupancaDeposito"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPoupanca" />

    <EditText
        android:id="@+id/etPoupancaDeposito"
        android:layout_width="266dp"
        android:layout_height="51dp"
        android:layout_marginBottom="36dp"
        android:ems="10"
        android:hint="@string/etPoupancaDeposito"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/tvEspecial"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPoupancaSaque" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="23dp"
        app:layout_constraintEnd_toEndOf="@+id/tvPoupanca"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rdPoupanca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/rdPoupanca" />

        <RadioButton
            android:id="@+id/rdEspecial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rdEspecial" />

    </RadioGroup>

    <TextView
        android:id="@+id/tvPoupanca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginTop="184dp"
        android:layout_marginBottom="23dp"
        android:hint="@string/tvPoupanca"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/etPoupancaSaque"
        app:layout_constraintStart_toStartOf="@+id/etPoupancaSaque"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvEspecial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="33dp"
        android:text="@string/tvEspecial"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/etEspecialSaque"
        app:layout_constraintEnd_toEndOf="@+id/etEspecialSaque"
        app:layout_constraintStart_toStartOf="@+id/etEspecialSaque"
        app:layout_constraintTop_toBottomOf="@+id/etPoupancaDeposito" />


    <EditText
        android:id="@+id/etEspecialSaque"
        android:layout_width="233dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/etEspecialSaque"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/etEspecialDeposito"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEspecial" />


    <EditText
        android:id="@+id/etEspecialDeposito"
        android:layout_width="263dp"
        android:layout_height="49dp"
        android:layout_marginTop="13dp"
        android:layout_marginBottom="54dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/etEspecialDeposito"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"

        app:layout_constraintBottom_toTopOf="@+id/tvRes"
        app:layout_constraintStart_toStartOf="@+id/etEspecialSaque"
        app:layout_constraintTop_toBottomOf="@+id/etEspecialSaque" /><![CDATA[/>

    ]]>

    <Button
        android:id="@+id/btnCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="49dp"
        android:layout_marginEnd="49dp"
        android:layout_marginBottom="14dp"
        android:text="@string/btnCalc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/etEspecialDeposito"
        app:layout_constraintHorizontal_bias="0.26"
        app:layout_constraintStart_toStartOf="@+id/etEspecialDeposito"
        app:layout_constraintTop_toBottomOf="@+id/tvRes" />

    <TextView
        android:id="@+id/tvRes"
        android:layout_width="326dp"
        android:layout_height="55dp"
        android:layout_marginTop="601dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/btnCalc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>